@@ -1,3 +1,9 @@
+Mon Feb 12 02:18:39 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmlogin.c: remove a duplicate bindtextdomain foo, and remove
+	  the default dialog pos is center thing since we explicitly set
+	  this anyway.
+
 Sun Feb 11 16:23:01 2001  George Lebl <jirka@5z.com>
 
 	* Release 2.0.98
